--- a/thank-you.html
+++ b/thank-you.html
@@ -1,1 +1,28 @@
-Thank you! Your submission has been received.
+<!DOCTYPE html>
+<html>
+{% include head.html %}
+
+<body id="page-top" class="index">
+  {% include nav.html %}
+  {% include header.html %}
+  <p>Thank you! Your submission has been received.</p>
+  {% include portfolio_grid.html %}
+  {% include about.html %}
+
+  {% if site.contact == "static" %}
+  {% include contact_static.html %}
+  {% elsif site.contact == "disqus" %}
+  {% include contact_disqus.html %}
+  {% else %}
+  {% include contact.html %}
+  {% endif %}
+
+  {% include footer.html %}
+  {% include modals.html %}
+  {% include js.html %}
+</body>
+
+</html>
+Give feedback
+
+
