--- a/thank-you.html
+++ b/thank-you.html
@@ -1,3 +1,7 @@
+---
+permalink: /thank-you.html
+---
+
 <!DOCTYPE html>
 <html>
 {% include head.html %}
@@ -24,5 +28,3 @@
 
 </html>
 Give feedback
-
-
