--- a/thank-you.html
+++ b/thank-you.html
@@ -9,7 +9,9 @@ permalink: /thank-you.html
 <body id="page-top" class="index">
   {% include nav.html %}
   {% include header.html %}
-  <p>Thank you! Your submission has been received.</p>
+  <div class="col-lg-12">
+  <p style="margin-top: 100px;">Thank you! Your submission has been received.</p>
+  </div>
   {% include portfolio_grid.html %}
   {% include about.html %}
 
