--- a/thank-you.html
+++ b/thank-you.html
@@ -9,8 +9,9 @@ permalink: /thank-you.html
 <body id="page-top" class="index">
   {% include nav.html %}
   {% include header.html %}
+  <div class="row">
   <div class="col-lg-12">
-  <p style="margin-top: 100px;">Thank you! Your submission has been received.</p>
+  <p style="margin-top: 70px; margin-bottom: 20px;">Thank you! Your submission has been received.</p>
   </div>
   {% include portfolio_grid.html %}
   {% include about.html %}
@@ -29,4 +30,3 @@ permalink: /thank-you.html
 </body>
 
 </html>
-Give feedback
