--- a/thank-you.html
+++ b/thank-you.html
@@ -9,9 +9,8 @@ permalink: /thank-you.html
 <body id="page-top" class="index">
   {% include nav.html %}
   {% include header.html %}
-  <div class="row">
-  <div class="col-lg-12">
-  <p style="margin-top: 70px; margin-bottom: 20px;">Thank you! Your submission has been received.</p>
+  <div class="container">
+  <p style="margin-top: 70px; margin-bottom: -70px;">Thank you! Your submission has been received.</p>
   </div>
   {% include portfolio_grid.html %}
   {% include about.html %}
