--- a/thank-you.html
+++ b/thank-you.html
@@ -9,10 +9,30 @@ permalink: /thank-you.html
 <body id="page-top" class="index">
   {% include nav.html %}
   {% include header.html %}
-  <div class="container">
-  <p style="margin-top: 70px; margin-bottom: -70px;">Thank you! Your submission has been received.</p>
+  <!-- Portfolio Grid Section -->
+<section id="portfolio">
+  <div class="container portfolio-flex-grid">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+  <p>Thank you! Your submission has been received.</p>
+      </div>
+    </div>
+    <div class="portfolio-flex-row">
+      {% for post in site.posts %}
+      <div class="portfolio-flex-item portfolio-item">
+        <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+          <div class="caption">
+            <div class="caption-content">
+              <i class="fa fa-search-plus fa-3x"></i>
+            </div>
+          </div>
+          <img src="img/grid/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
+        </a>
+      </div>
+      {% endfor %}
+    </div>
   </div>
-  {% include portfolio_grid.html %}
+</section>
   {% include about.html %}
 
   {% if site.contact == "static" %}
