--- a/thank-you.html
+++ b/thank-you.html
@@ -14,7 +14,7 @@ permalink: /thank-you.html
   <div class="container portfolio-flex-grid">
     <div class="row">
       <div class="col-lg-12 text-center">
-  <p style="text-align: left; padding-top: 20px; padding-bottom: 20px; font-weight: bold">Thank you! Your submission has been received.</p>
+  <p style="text-align: left; padding-top: 20px; padding-bottom: 20px;">Thank you! Your submission has been received.</p>
       </div>
     </div>
     <div class="portfolio-flex-row">
