--- a/thank-you.html
+++ b/thank-you.html
@@ -13,8 +13,8 @@ permalink: /thank-you.html
 <section id="portfolio">
   <div class="container portfolio-flex-grid">
     <div class="row">
-      <div class="col-lg-12 text-center">
-  <p style="text-align: left; padding-top: 20px; padding-bottom: 20px;">Thank you! Your submission has been received.</p>
+      <div class="h3">
+  <h3 style="text-align: left; padding-bottom: 20px;">Thank you! Your submission has been received.</h3>
       </div>
     </div>
     <div class="portfolio-flex-row">
