--- a/thank-you.html
+++ b/thank-you.html
@@ -14,7 +14,7 @@ permalink: /thank-you.html
   <div class="container portfolio-flex-grid">
     <div class="row">
       <div class="h3">
-  <h3 style="text-align: left; padding-bottom: 20px;">Thank you! Your submission has been received.</h3>
+  <h3 style="text-align: left; padding-top: 0px; padding-bottom: 20px;">Thank you! Your submission has been received.</h3>
       </div>
     </div>
     <div class="portfolio-flex-row">
