--- a/thank-you.html
+++ b/thank-you.html
@@ -9,34 +9,68 @@ permalink: /thank-you.html
 <body id="page-top" class="index">
   {% include nav.html %}
   {% include header.html %}
-  <!-- Portfolio Grid Section -->
-<section id="portfolio">
-  <div class="container portfolio-flex-grid">
-    <div class="row">
-      <div class="h3">
-  <h3 style="text-align: left; padding-top: 0px; padding-bottom: 20px;">Thank you! Your submission has been received.</h3>
-      </div>
-    </div>
-    <div class="portfolio-flex-row">
-      {% for post in site.posts %}
-      <div class="portfolio-flex-item portfolio-item">
-        <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
-          <div class="caption">
-            <div class="caption-content">
-              <i class="fa fa-search-plus fa-3x"></i>
-            </div>
-          </div>
-          <img src="img/grid/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
-        </a>
-      </div>
-      {% endfor %}
-    </div>
-  </div>
-</section>
+  {% include portfolio_grid.html %}
   {% include about.html %}
 
   {% if site.contact == "static" %}
-  {% include contact_static.html %}
+  <!-- Contact Section -->
+<section id="contact">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>Contact</h2>
+        <hr class="star-primary">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2">
+        <div class="h3">
+  <h3 style="text-align: left; padding-top: 0px; padding-bottom: 20px;">Thank you! Your submission has been received.</h3>
+      </div>
+<script type="text/javascript">var submitted=false;</script>
+<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='https://portfoliola.github.io/thank-you.html#contact';}"></iframe>
+        <form action="https://docs.google.com/forms/d/e/1FAIpQLSdsotjumr8UENyCQ84tuU4YqvgiC-zQa3dZj7TeHURi7Ebr9Q/formResponse?" method="POST" name="sentMessage" id="contactForm" novalidate target="hidden_iframe"
+    onsubmit="submitted=true;">
+          <div class="row control-group">
+            <div class="form-group col-xs-12 floating-label-form-group controls">
+              <label for="name">Name</label>
+              <input type="text" name="entry.2005620554" class="form-control" placeholder="Name" id="name" required
+                data-validation-required-message="Please enter your name.">
+              <p class="help-block text-danger"></p>
+            </div>
+          </div>
+          <div class="row control-group">
+            <div class="form-group col-xs-12 floating-label-form-group controls">
+              <label for="email">Email Address</label>
+              <input type="email" name="entry.1045781291" class="form-control" placeholder="Email Address" id="email" required
+                data-validation-required-message="Please enter your email address.">
+              <p class="help-block text-danger"></p>
+            </div>
+          </div>
+          <div>
+            <input type="hidden" name="_subject" value="New submission!">
+            <input type="text" name="_gotcha" style="display:none" />
+          </div>
+          <div class="row control-group">
+            <div class="form-group col-xs-12 floating-label-form-group controls">
+              <label for="message">Message</label>
+              <textarea rows="5" name="entry.1065046570" class="form-control" placeholder="Message" id="message" required
+                data-validation-required-message="Please enter a message."></textarea>
+              <p class="help-block text-danger"></p>
+            </div>
+          </div>
+          <br>
+          <div id="success"></div>
+          <div class="row">
+            <div class="form-group col-xs-12">
+              <button type="submit" class="btn btn-success btn-lg">Send</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</section>
   {% elsif site.contact == "disqus" %}
   {% include contact_disqus.html %}
   {% else %}
