--- a/thank-you.html
+++ b/thank-you.html
@@ -24,8 +24,7 @@ permalink: /thank-you.html
     </div>
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
-        <div class="h3">
-  <h3 style="text-align: left; padding-top: 0px; padding-bottom: 20px;">Thank you! Your submission has been received.</h3>
+  <p style="text-align: left; padding-top: 0px; padding-bottom: 20px;">Thank you! Your submission has been received.</p>
       </div>
 <script type="text/javascript">var submitted=false;</script>
 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='https://portfoliola.github.io/thank-you.html#contact';}"></iframe>
