--- a/thank-you.html
+++ b/thank-you.html
@@ -27,7 +27,7 @@ permalink: /thank-you.html
   <p style="text-align: left; padding-top: 50px; padding-bottom: 20px; font-weight: bold;">Thank you! Your submission has been received.</p>
       </div>
 <script type="text/javascript">var submitted=false;</script>
-<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='https://portfoliola.github.io/thank-you.html#contact';}"></iframe>
+<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='https://www.erikahimsl.com/thank-you.html#contact';}"></iframe>
         <form action="https://docs.google.com/forms/d/e/1FAIpQLSdsotjumr8UENyCQ84tuU4YqvgiC-zQa3dZj7TeHURi7Ebr9Q/formResponse?" method="POST" name="sentMessage" id="contactForm" novalidate target="hidden_iframe"
     onsubmit="submitted=true;">
           <div class="row control-group">
